Added modified devise for stripe

--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -27,7 +27,7 @@
     </div>
     
     <div class="field form-group">
-      <%= f.label :card_code, "Security Code on Card (CVV)" %>
+      <%= f.label :card_code, "Security Code on Card (CVC)" %>
       <%= text_field_tag :card_code, nil, name: nil, class: "form-control" %>
     </div>
     
